<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="@style/TitleButton"
        android:textColor="@color/green_main"
        android:drawableLeft="@drawable/ic_back_arrow"
        android:text="@string/btn_back"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewpager">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_like_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0" />

                <ImageView
                    android:id="@+id/img_rating_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:src="@drawable/rating_circle"
                    app:layout_constraintBottom_toBottomOf="@+id/rv_like_viewpager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_like_viewpager" />

                <TextView
                    android:id="@+id/txt_rating_profile"
                    style="@style/CustomTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/img_rating_profile"
                    app:layout_constraintEnd_toEndOf="@+id/img_rating_profile"
                    app:layout_constraintStart_toStartOf="@+id/img_rating_profile"
                    app:layout_constraintTop_toTopOf="@+id/img_rating_profile" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    app:layout_constraintBottom_toBottomOf="@+id/rv_like_viewpager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabMaxWidth="@dimen/_10sdp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <include
                android:id="@+id/employer_data"
                layout="@layout/employer_card_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="0" />

            <include
                android:id="@+id/employer_scales"
                layout="@layout/scales_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:visibility="gone"
                />

            <include
                android:id="@+id/employee_data"
                layout="@layout/employee_card_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintVertical_bias="0" />


            <TextView
                android:id="@+id/employee_txt_detail"
                style="@style/CustomStandartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/employer_txt_detail"
                style="@style/CustomStandartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title_instagram"
                style="@style/CustomTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:text="@string/title_detail_instagram" />

            <include
                android:id="@+id/instagram_data"
                layout="@layout/instagram_data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/employer_btn_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:backgroundTint="@color/white"
                android:contentDescription="TODO"
                android:fontFamily="@font/inter_black"
                android:text="@string/btn_other_vacancies"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/green_main"
                android:visibility="gone"
                app:icon="@drawable/ic_chevron_right"
                app:iconGravity="end"
                app:iconSize="@dimen/_8sdp"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="src_over"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_vertical" />


            <TextView
                android:id="@+id/title_reviews"
                style="@style/CustomTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/title_details_reviews"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>